--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -14,6 +14,11 @@
         <div id="colorDiv"></div>
     </div>
     <script src="p5.min.js"></script>
+    <div>
+        <p id="title"></p>
+        <p id="out-ll"></p>
+        <p id="out-change"></p>
+    </div>
     <script src="inputColors.js"></script>
     <script src="index.js"></script>
 </body>
